--- a/app/views/admin/blogs/_form.html.erb
+++ b/app/views/admin/blogs/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="box box-primary">
   <div class="box-body">
     <div class="form-group">
-      <%= bootstrap_form_for [:admin, @blog] do |f| %>
+      <%= bootstrap_form_for(@blog) do |f| %>
         <%= f.alert_message "エラーがあります。" %>
         <%= f.text_field :title %>
         <%= f.text_area :content %>
