--- a/app/views/kaminari/user/_paginator.html.erb
+++ b/app/views/kaminari/user/_paginator.html.erb
@@ -16,6 +16,6 @@
         <%= gap_tag %>
       <% end -%>
     <% end -%>
-    <%= next_page_tag unless current_page.last? %>
+    <%= next_page_tag %>
   </ul>
 <% end -%>
