--- a/app/assets/stylesheets/user/style.scss
+++ b/app/assets/stylesheets/user/style.scss
@@ -13,7 +13,7 @@ h3 a:hover {
   text-decoration: none;
 }
 
-.pagination .first a:hover {
+.pagination .page-option a:hover {
   cursor: default;
   background-color: #777777;
 }
