--- a/app/views/admin/shared/_footer.html.erb
+++ b/app/views/admin/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class="main-footer">
-  <strong>Copyright &copy; 2016 <%= link_to admin_dashboard_path do %>sample<% end %>.</strong> All rights reserved.
+  <strong>Copyright &copy; 2016 <%= link_to root_path do %>sample<% end %>.</strong> All rights reserved.
 </footer>
