--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <%= link_to admin_dashboard_path, class: 'logo' do %>
+  <%= link_to root_path, class: 'logo' do %>
     <span class="logo-lg"><b>sample</b></span>
   <% end %>
 </header>
