--- a/app/views/kaminari/user/_next_page.html.erb
+++ b/app/views/kaminari/user/_next_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="next">
-  <%= link_to_unless current_page.last?, t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote %>
+<li class="<%= 'page-option' if current_page.last? %>">
+  <%= link_to t('views.pagination.next').html_safe, url, :rel => 'next', :remote => remote %>
 </li>
