--- a/app/views/kaminari/user/_prev_page.html.erb
+++ b/app/views/kaminari/user/_prev_page.html.erb
@@ -6,6 +6,6 @@
     per_page:      number of items to fetch per page
     remote:        data-remote
 -%>
-<li class="<%= 'first' if current_page.first? %>">
+<li class="<%= 'page-option' if current_page.first? %>">
   <%= link_to t('views.pagination.previous').html_safe, url, :rel => 'prev', :remote => remote %>
 </li>
