--- a/app/views/layouts/user/application.html.erb
+++ b/app/views/layouts/user/application.html.erb
@@ -10,6 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/entypo-fontello/0.1/entypo.css" rel="stylesheet" type='text/css'>
 </head>
 <body>
 <%= render partial: 'user/shared/header' %>
