--- a/app/views/user/shared/_footer.html.erb
+++ b/app/views/user/shared/_footer.html.erb
@@ -1,11 +1,9 @@
 <footer id="footer" class="clearfix ">
 	<div class="subfooter">
 		<div class="container">
-			<div class="subfooter-inner">
-				<div class="row">
-					<div class="col-md-12">
-						<p class="text-center">Copyright © 2016 The Project by <%= link_to "Sample", user_blogs_path %>. All Rights Reserved</p>
-					</div>
+			<div class="row">
+				<div class="col-md-12">
+					<p class="text-center">Copyright © 2016 The Project by <%= link_to "Sample", root_path %>. All Rights Reserved</p>
 				</div>
 			</div>
 		</div>
