--- a/app/views/user/shared/_header.html.erb
+++ b/app/views/user/shared/_header.html.erb
@@ -5,7 +5,7 @@
 				<div class="col-md-3 ">
 					<div class="header-left clearfix">
 						<div id="logo" class="logo">
-							<h3><%= link_to user_blogs_path , class: "logo-font" do %><span class="text-default">Sample</span><% end %></h3>
+							<h3><%= link_to root_path , class: "logo-font" do %><span class="text-default">Sample</span><% end %></h3>
 						</div>
 					</div>
 				</div>
