管理者認証追加

--- a/app/views/admin/shared/_sidebar.html.slim
+++ b/app/views/admin/shared/_sidebar.html.slim
@@ -4,6 +4,11 @@ aside.main-sidebar
       li.header
         | Menu
       li
+        = link_to destroy_admin_user_session_path, method: :delete do
+          i.fa.fa-link
+          span
+            | ログアウト
+      li
         = link_to admin_blogs_path do
           i.fa.fa-link
           span
