--- a/app/views/layouts/admin/login.html.slim
+++ b/app/views/layouts/admin/login.html.slim
@@ -8,10 +8,5 @@ html
     = csrf_meta_tags
     link[rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"]
     link[rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"]
-  body.hold-transition.skin-blue.sidebar-mini
-    .wrapper
-      = render partial: 'admin/shared/header'
-      = render partial: 'admin/shared/sidebar'
-      .content-wrapper
-        = yield
-      = render partial: 'admin/shared/footer'
+  body.hold-transition.login-page
+    = yield
