--- a/app/views/layouts/user/application.html.slim
+++ b/app/views/layouts/user/application.html.slim
@@ -6,10 +6,10 @@ html
     = stylesheet_link_tag    'user/application', media: 'all'
     = javascript_include_tag 'user/application'
     = csrf_meta_tags
-    link[href="http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic" rel="stylesheet" type="text/css"]
-    link[href="http://fonts.googleapis.com/css?family=Raleway:700,400,300" rel="stylesheet" type="text/css"]
-    link[href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"]
-    link[href="http://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css"]
+    link[href="//fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic" rel="stylesheet" type="text/css"]
+    link[href="//fonts.googleapis.com/css?family=Raleway:700,400,300" rel="stylesheet" type="text/css"]
+    link[href="//fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css"]
+    link[href="//fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet" type="text/css"]
     link[href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"]
     link[href="https://cdn.jsdelivr.net/entypo-fontello/0.1/entypo.css" rel="stylesheet" type="text/css"]
   body
