--- a/app/views/admin/shared/_footer.html.slim
+++ b/app/views/admin/shared/_footer.html.slim
@@ -1,7 +1,7 @@
 footer.main-footer
   strong
-    | Copyright © 2016 
-    = link_to root_path do
+    | Copyright © 2016
+    = link_to admin_blogs_path do
       | sample
     | .
-  |  All rights reserved. 
+  |  All rights reserved.
