--- a/app/views/admin/shared/_header.html.slim
+++ b/app/views/admin/shared/_header.html.slim
@@ -1,5 +1,5 @@
 header.main-header
-  = link_to root_path, class: 'logo' do
+  = link_to admin_blogs_path, class: 'logo' do
     span.logo-lg
       b
         | sample
