--- a/app/views/mypage/shared/_footer.html.slim
+++ b/app/views/mypage/shared/_footer.html.slim
@@ -5,5 +5,5 @@ footer#footer.clearfix
         .col-md-12
           p.text-center
             | Copyright © 2016 The Project by 
-            = link_to "Sample", root_path
+            = link_to "Sample", mypage_blogs_path
             | . All Rights Reserved
