--- a/app/views/mypage/shared/_header.html.slim
+++ b/app/views/mypage/shared/_header.html.slim
@@ -6,6 +6,6 @@
           .header-left.clearfix
             #logo.logo
               h3
-                = link_to root_path , class: "logo-font" do
+                = link_to mypage_blogs_path , class: "logo-font" do
                   span.text-default
                     | Sample
