--- a/app/views/mypage/blogs/_form.html.slim
+++ b/app/views/mypage/blogs/_form.html.slim
@@ -1,5 +1,5 @@
 .contact-form
-  = bootstrap_form_for(@blog, inline_errors: false, id: "contact-form-with-recaptcha", class: "margin-clear") do |f|
+  = bootstrap_form_for([:mypage,@blog], inline_errors: false, id: "contact-form-with-recaptcha", class: "margin-clear") do |f|
     = f.alert_message "エラーがあります。"
     .form-group.has-feedback
       = f.text_field :title
