--- a/app/views/mypage/shared/_sidebar.html.slim
+++ b/app/views/mypage/shared/_sidebar.html.slim
@@ -7,6 +7,6 @@ aside.col-md-4.col-lg-3.col-md-pull-8.col-lg-pull-9
       nav
         ul.nav.nav-pills.nav-stacked
           li
-            = link_to "Blog一覧", user_blogs_path
+            = link_to "Blog一覧", mypage_blogs_path
           li
-            = link_to "Blog作成", new_user_blog_path
+            = link_to "Blog作成", new_mypage_blog_path
