--- a/app/views/layouts/admin/login.html.slim
+++ b/app/views/layouts/admin/login.html.slim
@@ -3,8 +3,8 @@ html
   head
     title
       | Sample
-    = stylesheet_link_tag    "admin/application", media: "all"
-    = javascript_include_tag "admin/application"
+    = stylesheet_link_tag    'admin/application', media: 'all'
+    = javascript_include_tag 'admin/application'
     = csrf_meta_tags
     link[rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"]
     link[rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"]
